frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: nextjs
  template: 
    metadata:
      labels:
        service: nextjs
    spec:
      containers:
        - name: container
          image: notemann27/rememberry-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: webapp
