frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    service: nextjs
spec:
  ports:
    - port: 3000
      name: webapp
      targetPort: webapp
  selector:
    service: nextjs
